聊天内容滚动到底部

--- a/instant-message/src/app/app.component.html
+++ b/instant-message/src/app/app.component.html
@@ -4,7 +4,7 @@
             messenger
         </div>
     </div>
-    <div class="container message-container">
+    <div id="message-container" class="container message-container">
         <div *ngFor="let event of allEvents; let index = index trackBy: trackByIndex">
 
             <app-in-message
