--- a/instant-message/src/app/app.component.html
+++ b/instant-message/src/app/app.component.html
@@ -63,6 +63,6 @@
 
 <ng-template #template>
     <ul nz-menu nzInDropDown>
-      <li nz-menu-item (click)="withdraw()">撤回</li>
+      <li nz-menu-item (click)="recall()">撤回</li>
     </ul>
   </ng-template>
