修改图片发送方式

--- a/instant-message/src/app/app.component.html
+++ b/instant-message/src/app/app.component.html
@@ -35,6 +35,9 @@
     <div class="row fixed-text-box">
         <div class="col">
             <form [formGroup]="messageForm" (ngSubmit)="onSubmit(messageForm)">
+                <button class="sendImg" (click)="sendImg()">
+                    图片
+                  </button>
                 <textarea
                     type="text"
                     formControlName="msg"
